Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/develop_modulo11-ci-cd-practico.yml
+++ b/.github/workflows/develop_modulo11-ci-cd-practico.yml
@@ -40,21 +40,12 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: .net-app
-      
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FB4C5CAFC2F24B339DC1ED1A6C047099 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5AEFD1278A604F24A046F362D28E5E72 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_65D5E8CE6EFA48718638E776F7D02BB9 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -62,5 +53,5 @@ jobs:
         with:
           app-name: 'modulo11-ci-cd-practico'
           slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B1C33F8000124825B027F7270A370363 }}
           package: .
-          
