--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -38,7 +38,24 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  build-and-test:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 8.0.x
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build
+      run: dotnet build --no-restore
+    - name: Test
+      run: dotnet test --no-build --verbosity normal
+      
+  image-build:
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -65,11 +82,11 @@ jobs:
           tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
           file: ./CICD.WEB/Dockerfile
 
-  deploy:
+  deploy-to-azure:
     permissions:
       contents: none
     runs-on: ubuntu-latest
-    needs: build
+    needs: image-build
     environment:
       name: 'Development'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
