--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -57,6 +57,7 @@ jobs:
       
   image-build:
     runs-on: ubuntu-latest
+    needs: build-and-test
     permissions:
       packages: write
     steps:
